--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-asgiref==3.3.4
-Django==3.2.3
-Pillow==8.2.0
+asgiref==3.5.2
+Django==4.0.6
+mysqlclient==2.1.1
+Pillow==9.2.0
 pytz==2021.1
 sqlparse==0.4.1
