--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,14 @@
 asgiref==3.5.2
+boto3==1.24.42
+botocore==1.27.42
 Django==4.0.6
+django-storages==1.12.3
+jmespath==1.0.1
 mysqlclient==2.1.1
 Pillow==9.2.0
+python-dateutil==2.8.2
 pytz==2021.1
+s3transfer==0.6.0
+six==1.16.0
 sqlparse==0.4.1
+urllib3==1.26.11
